# turing

./: .gitignore  CMakeLists.txt  README.md  turing.cxx
data/: alphabet.txt  rules.txt  tape.txt
